# MasterThesis2023

./: .gitignore  README.md  TODO.txt
Study Material/: 802.15.4_mac.drawio  NTT.txt  Test report 3.xlsx  Test report.xlsx  USB MADE SIMPLE.txt  circleplot.m  dilithium_call_graph.drawio  plot_grid.m  plot_performance_line.m
Study Material/Diagrams/: 802.15.4_mac.drawio  DS2-Diagram.drawio  DS2_KeyGen_802_15_4.drawio
Study Material/Ricci Threshhold signature/: DS_tn-Diagram.drawio
Study Material/Ricci Threshhold signature/ds2-opt-c-impl-main/ds2-opt-c-impl-main/src/: CMakeLists.txt  benchmark.c  gen.c  poly.c  rand.c  reduce.c  sign.c  socket.c  test_file.c  test_network.c  util.c  verify.c
Study Material/wireless study/A Practical Guide to BLE Throughput _ Interrupt_files/: 8551838.js.download  css  embed_26e9e8efab030e3f7addf7acd3cc5c05e07c6024.css  embedded_theme_3_774a06d2c473209133fa0da5f231b0991ab7f2af.css  gtm.js.download  main.css
src_C/DS2_Host/: CMakeLists.txt  Public_key.txt  Signature.txt  calculator.py  main_app.py  test results.xlsx  test.py
src_C/DS2_Host/lib/: ds2.cp311-win_amd64.pyd  ds2.cp312-win_amd64.pyd  ds2.exp  ds2.lib  test_module.cp312-win_amd64.pyd  test_module.exp  test_module.lib
src_C/DS2_Host/source/ds2/: ds2_host_class.cpp  ds2_host_class.h  ds2_node_class.cpp  ds2_node_class.h  ds2_setup.h
src_C/DS2_Host/source/ds2/inc/: commit.h  ds2_osi3_conf.h  fips202.h  ntt.h  params.h  party.h  poly.h
src_C/DS2_Host/source/ds2/src/: commit.c  gen.c  ntt.c  party.c  poly.c  rand.c  reduce.c  sign.c  verify.c
src_C/DS2_Host/source/exec/: main.cpp
src_C/DS2_Host/source/module/: python_wrapper.cpp
src_C/PolynomialOperations/: PolynomialOperations.sln
src_C/PolynomialOperations/Tests/: Tests.vcxproj  (+2 more)
src_C/poly_lib/: polynomial.c  polynomial.h
src_PIC24/Dilithium_test.X/: confbit.h  main.c
src_Py/: NTT_12289.py  NTT_Wiki.py  bit_reverse.py  brute_force_root_of_unity.py  serial_sniffer.py  tables.py
src_STM32/: MX_Mac_802_15_4_RFD.ioc  mac_802_15_4_FFD.ioc  send_big_data.txt  src_STM32.ioc  stm_time_benchmark.txt
src_STM32/CRYP_AESModes/: .extSettings  CRYP_AESModes.ioc
src_STM32/Dilithium_F103/: .cproject  .project  Dilithium_F103.ioc
src_STM32/MX_Mac_802_15_4_RFD/: .cproject  .mxproject  .project  MX_Mac_802_15_4_RFD.ioc
src_STM32/UART_Console/: .extSettings  UART_Console.ioc
src_STM32/USB_Dongle_only/: .mxproject  STM32WB55RGVX_FLASH.ld  STM32WB55RGVX_RAM.ld  USB_Dongle_only.ioc  USB_Dongle_only.launch
(+420 files in other folders)
